@@ -1,3 +1,10 @@
+2019-03-11  Ian Lance Taylor  <iant@golang.org>
+
+	PR libbacktrace/89669
+	* Makefile.am (BUILDTESTS): Only add ztest and ztest_alloc if
+	HAVE_ELF.
+	* Makefile.in: Regenerate.
+
 2019-02-26  Tom de Vries  <tdevries@suse.de>
 
 	* btest.c (test5): Allow global.* as minimal symbol name for global.
